--- a/users/sx/README_sx_2017-12-06.md
+++ b/users/sx/README_sx_2017-12-06.md
@@ -27,7 +27,10 @@ Zahl die daher Werte zwischen 0 und 255 annehmen kann.
 Damit Betriebssysteme auf die Informationen zugreifen können, muss auf
 dem Datenträger ein oder mehrere Dateisysteme zu finden sein. In der 
 Regel wird ein Datenträger **partitioniert**, also in mehrer Teile 
-aufgeteilt. Auf den Teilen können dann Dateisysteme **formatiert** werden.
+aufgeteilt. Auf den Teilen können dann Dateisysteme **formatiert** werden. 
+Erst nach der Formatierung kann ein Dateisystem (Laufwerk) eingebunden (**gemounted**) werden,
+und ist dann für Programme verfügbar. Das heißt, es können dann Dateien, Verzeichnisse, ... 
+darin gespeichert werden.
 
 | Betriebssysteme | Dateisystem | Abkürzung steht für... | Vorgänger |
 | ----------- | ------------ | ------------------ | ----------------- |
@@ -58,10 +61,11 @@ Um dieses Problem zu lösen wurde von der IEC  folgende Festlegung getroffen:
 Das System ist leider kaum bekannt, da die Firma Microsoft die Bezeichnung nicht in sein System Windows übernommen hat,
 und viele amerikanische und asiatische Hersteller das ebenso machen.
 
-### Einbindung von Dateisystemen
+### Einbindung (mounten) von Dateisystemen
 
 In Windows mit einem Laufwerksbuchstaben: zB **C:** fpr die interne Festplatte
-In macOs, Android, Linux wird ein Dateisystem in den Verzeichnisbaum an eine beliebige Stelle *eingehängt* (*mounted*).
+In macOs, Android, Linux wird ein Dateisystem in den Verzeichnisbaum an eine beliebige Stelle als Verzeichnis *eingehängt* (*mounted*).
+In Ubuntu werden angesteckte USB-Sticks zum Beispiel als Unterverzeichnis im Ordner */media* sichtbar.
 
 ## Eigenschaften von Dateisystemen
 
@@ -77,8 +81,45 @@ Wichtiger Unterschied:
 * appFS auf macOS: konfigurierbar
 * ext4: Datei-/Verzeichnisnamen sind **case sensitive**
 
+Was bedeutet das:
+* **Non case sensitive**: Groß- und Kleinbuchstaben werden nicht unterschieden.  
+  zB: *test.txt* und *Test.txt* sind Namen für ein und die gleiche Datei.
+* **Case sensitive**: Groß- und Kleinbuchstaben werden unterschieden.  
+  zB: *test.txt* und *Test.txt* sind Namen für zwei unterschiedliche Dateien.
+
 ## Home-Verzeichnis
 
 Ist das Verzeichnis des aktuellen Benutzers. In diesem kann der Benutzer seine Daten ablegen.
 
-Unter Linux im Verzeichnis **/home** zu finden
+Wo sind Home-Verzeichnisse im Normalfall zu finden?
+* Windows: im Verzeichnis *C:\Users*
+* Linux: im Verzeichnis */home*  
+  Beispiel: Der Benutzer mit der ID *schueler* findet sein Home-Verzeichnis unter */home/schueler*.
+* macOS: im Verzeichnis */Users*
+
+-----------------------------------------------------------------------------
+# Dateiformat (Codierung)
+
+Siehe auch: [Wikipedia file format](https://en.wikipedia.org/wiki/File_format)
+
+Bereits der Name Informatik lässt erahnen, dass es sehr oft um die Erfassung, Verarbeitung und Speicherung von Informationen geht.
+
+Damit das mit Computern möglich ist, müssen Informationen **codiert** (**encoded**) werden. Das heißt, Informationen werden in eine für den Computer lesbare bzw. verarbeitbare Form gebracht und dann in Dateien in Form von Bytes abgespeichert.  
+Beispiel: Ein Foto wird als Datei *bild.jpg* abgespeichert. Es wurde nach dem JPEG-Standard codiert.
+
+Damit der Benutzer die verwendete Codierung erkennen kann, werden Dateien sehr oft mit einer Dateiendung (Extension) versehen, die Rückschlüsse auf die verwendete Codierung zulässt.
+
+Beispiele:
+* **.txt**: Einfache Textdatei die meist nach ASCII oder UTF-8 codiert ist,
+            und mit einem Texteditor bearbeitet werden kann.
+* **.odt**: Textverarbeitungsdatei für LibreOffice Writer.
+* **.png**: Bild, das nach dem Standard *Portable Network Graphics* codiert wurde.
+* **.svg**: Eine Textdatei, die Anweisungen zum zeichnen eines Bildes (Scaleable Vector Graphics) enthält.
+* **.zip**: Eine Datei oder ein Verzeichnis wurde nach dem zip-Standard verlustlos komprimiert.
+* ...
+
+Die Änderung der Extension ändert nur den Namen, aber nicht den Inhalt und somit nicht die Codierung einer Datei.  
+Wenn zum Beispiel ein JPEG-Bild in ein PNG-Bild umgewandelt werden soll, so kann das nur mit Hilfe einer spezielle Software erfolgen (zB gimp)!
+
+Der *"rohe Inhalt"* einer Datei, also die einzelnen Bytes kann man mit bestimmten Programmen sichtbar machen.  
+Unter Linux verwendet man dazu in der Shell gerne das Kommando `hexdump` mit der Option `-C`.
