--- a/users/sx/README_sx_2017-12-06.md
+++ b/users/sx/README_sx_2017-12-06.md
@@ -92,10 +92,10 @@ Was bedeutet das:
 Ist das Verzeichnis des aktuellen Benutzers. In diesem kann der Benutzer seine Daten ablegen.
 
 Wo sind Home-Verzeichnisse im Normalfall zu finden?
-* Windows: im Verzeichnis *C:\Users*
-* Linux: im Verzeichnis */home*  
-  Beispiel: Der Benutzer mit der ID *schueler* findet sein Home-Verzeichnis unter */home/schueler*.
-* macOS: im Verzeichnis */Users*
+* Windows: im Verzeichnis `C:\Users`  
+* Linux: im Verzeichnis `/home`  
+  Beispiel: Der Benutzer mit der ID `schueler` findet sein Home-Verzeichnis unter `/home/schueler`.
+* macOS: im Verzeichnis `/Users`
 
 -----------------------------------------------------------------------------
 # Dateiformat (Codierung)
@@ -107,7 +107,7 @@ Bereits der Name Informatik lässt erahnen, dass es sehr oft um die Erfassung, V
 Damit das mit Computern möglich ist, müssen Informationen **codiert** (**encoded**) werden. Das heißt, Informationen werden in eine für den Computer lesbare bzw. verarbeitbare Form gebracht und dann in Dateien in Form von Bytes abgespeichert.  
 Beispiel: Ein Foto wird als Datei *bild.jpg* abgespeichert. Es wurde nach dem JPEG-Standard codiert.
 
-Damit der Benutzer die verwendete Codierung erkennen kann, werden Dateien sehr oft mit einer Dateiendung (Extension) versehen, die Rückschlüsse auf die verwendete Codierung zulässt.
+Damit der Benutzer die verwendete Codierung erkennen kann, werden Dateien sehr oft mit einer Dateiendung (Extension) versehen. Diese lässt Rückschlüsse auf die verwendete Codierung zu.
 
 Beispiele:
 * **.txt**: Einfache Textdatei die meist nach ASCII oder UTF-8 codiert ist,
@@ -121,5 +121,5 @@ Beispiele:
 Die Änderung der Extension ändert nur den Namen, aber nicht den Inhalt und somit nicht die Codierung einer Datei.  
 Wenn zum Beispiel ein JPEG-Bild in ein PNG-Bild umgewandelt werden soll, so kann das nur mit Hilfe einer spezielle Software erfolgen (zB gimp)!
 
-Der *"rohe Inhalt"* einer Datei, also die einzelnen Bytes kann man mit bestimmten Programmen sichtbar machen.  
+Der *"rohe Inhalt"* einer Datei, also die einzelnen Bytes, kann man mit bestimmten Programmen sichtbar machen.  
 Unter Linux verwendet man dazu in der Shell gerne das Kommando `hexdump` mit der Option `-C`.
